--- a/gestion.html
+++ b/gestion.html
@@ -1740,17 +1740,47 @@ color: #333333;
   <p class="author">
 Dr. Unai Ganzedo Lopez ss
   </p>
-  <p class="date">09 diciembre 2020</p>
+  <p class="date">10 diciembre 2020</p>
 </div>
-<div id="diagrama-de-los-participante-en-la-gestión." class="slide section level2">
-<h1>Diagrama de los Participante en la gestión.</h1>
-<div id="htmlwidget-53d651cccc00094656c5" style="width:768px;height:576px;" class="grViz html-widget"></div>
-<script type="application/json" data-for="htmlwidget-53d651cccc00094656c5">{"x":{"diagram":"\ndigraph dot {\n\ngraph [layout = dot]\n\nnode [shape = circle,\n      style = filled,\n      color = grey,\n      label = \"\"]\n\nnode [fillcolor = green]\na[label=\"Sostenibilidad\"]\n\nnode [fillcolor = orange]\nb[label=\"Gestion Pesquera\"] c[label=\"Clientes\"] d[label=\"Sector Extractor\"]\n\nnode [fillcolor = yellow]\n\nedge [color = grey]\na -> {b c d}\nb -> {e[label=\"Organismos oficiales\"] f[label=\"ONGs\"] g[label=\"Certificación\"]}\nc -> {k[label=\"Exigencia\"] l[label=\"Disponibilidad\"] m[label=\"Concienciación\"] }\nd -> {q[label=\"Visión de futuro\"] r[label=\"Concienciación\"] s[label=\"Sensibilidad\"]}\n}","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div id="diagrama-stakeholders" class="slide section level2">
+<h1>Diagrama Stakeholders</h1>
+<div class="figure" style="text-align: center">
+<div id="htmlwidget-23e5eda0f69ee0b8d5f2" style="width:100%;height:576px;" class="grViz html-widget"></div>
+<script type="application/json" data-for="htmlwidget-23e5eda0f69ee0b8d5f2">{"x":{"diagram":"\ndigraph dot {\n\n    \ngraph [layout = dot, label=\"\",fontsize =300,labelloc = t]\n\nnode [shape = circle,\n      style = filled,\n      color = grey,\n      label = \"\"]\n\nnode [fillcolor = green]\na[label=\"Sostenibilidad\",fontsize =200, width = 10]\n\nnode [fillcolor = orange, width = 10,fontsize =100]\nb[label=\"Gestión Pesquera\"] c[label=\"Clientes\"] d[label=\"Sector extractivo\"]\n\nnode [fillcolor = yellow , width = 10,fontsize =100]\n\nedge [color = grey,dir=both ,arrowsize = 3,minlen = 10, color = Black]\na -> {b c d}\nb -> {e[label=\"Organismos oficiales\"] f[label=\"ONGs\"] g[label=\"Certificación\"]}\nc -> {k[label=\"Exigencia\"] l[label=\"Disponibilidad\"] m[label=\"Concienciación\"] }\nd -> {q[label=\"Visión de futuro\"] r[label=\"Concienciación\"] s[label=\"Sensibilidad\"]}\n}","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<p class="caption">
+Diagrama Stakeholders
+</p>
 </div>
-<div id="r-markdown" class="slide section level2">
-<h1>R Markdown</h1>
-<p>This is an R Markdown presentation. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
-<p>When you click the <strong>Knit</strong> button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document.</p>
+</div>
+<div id="qué-quiere-el-cliente" class="slide section level2">
+<h1>¿Qué quiere el cliente ?</h1>
+<div class="figure" style="text-align: center">
+<div id="htmlwidget-eac54181bdf9cfeedbf1" style="width:100%;height:576px;" class="grViz html-widget"></div>
+<script type="application/json" data-for="htmlwidget-eac54181bdf9cfeedbf1">{"x":{"diagram":"\ndigraph dot {\n\n    \ngraph [layout = dot, label=\"\",fontsize =300,labelloc = t]\n\nnode [shape = circle,\n      style = filled,\n      color = grey,\n      label = \"\"]\n\nnode [fillcolor = green]\n\na[label=\"Cliente\",fontsize =200, width = 10]\nnode [fillcolor = orange, width = 10,fontsize =100]\n\nb[label=\"Sostenibilidad\"] c[label=\"Calidad\"] d[label=\"Precio\"]\nnode [fillcolor = yellow , width = 10,fontsize =100]\n\nedge [color = grey,dir=both ,arrowsize = 3,minlen = 10, color = Black]\n\n\n\na -> {b c d}\nb -> {e[label=\"Ecológica\"] f[label=\"Social\"] g[label=\"Visión de futuro\"]}\nc -> {k[label=\"Alimentaria\"]  m[label=\"Seguridad\"] }\nd -> {q[label=\"Interés\"] r[label=\"Preocupación\"] s[label=\"Sensibilidad\"]}\n\n\n}","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<p class="caption">
+El interés como clientes
+</p>
+</div>
+</div>
+<div id="qué-quiere-al-armador" class="slide section level2">
+<h1>¿Qué quiere al armador?</h1>
+<div class="figure" style="text-align: center">
+<div id="htmlwidget-4dc484c883ac9b3598a5" style="width:100%;height:576px;" class="grViz html-widget"></div>
+<script type="application/json" data-for="htmlwidget-4dc484c883ac9b3598a5">{"x":{"diagram":"\ndigraph dot {\n\n    \ngraph [layout = dot, label=\"\",fontsize =300,labelloc = t]\n\nnode [shape = circle,\n      style = filled,\n      color = grey,\n      label = \"\"]\n\nnode [fillcolor = green]\n\na[label=\"Armador\",fontsize =200, width = 10]\nnode [fillcolor = orange, width = 10,fontsize =100]\n\nb[label=\"Rentabilidad\"] c[label=\"Estabilidad\"] d[label=\"Imagen\"]\nnode [fillcolor = yellow , width = 10,fontsize =100]\n\nedge [color = grey,dir=both ,arrowsize = 3,minlen = 10, color = Black]\n\n\n\na -> {b c d}\nb -> {e[label=\"Buen Precio\"] f[label=\"Menos costos\"] }\nc -> {k[label=\"Tranquilidad\"]  m[label=\"Durabilidad\"] }\nd -> {q[label=\"Prestigio\"] r[label=\"Competitividad\"] }\n\n\n}","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<p class="caption">
+El interés como armador
+</p>
+</div>
+</div>
+<div id="qué-quieren-los-gestores" class="slide section level2">
+<h1>¿Qué quieren los gestores?</h1>
+<div class="figure" style="text-align: center">
+<div id="htmlwidget-daa4c5e2c10e4a21138f" style="width:100%;height:576px;" class="grViz html-widget"></div>
+<script type="application/json" data-for="htmlwidget-daa4c5e2c10e4a21138f">{"x":{"diagram":"\ndigraph dot {\n\n    \ngraph [layout = dot, label=\"\",fontsize =300,labelloc = t]\n\nnode [shape = circle,\n      style = filled,\n      color = grey,\n      label = \"\"]\n\nnode [fillcolor = green]\n\na[label=\"Gestores\",fontsize =200, width = 10]\nnode [fillcolor = orange, width = 10,fontsize =100]\n\nb[label=\"Economía\"] c[label=\"Ecología\"] d[label=\"Justicia Social\"]\nnode [fillcolor = yellow , width = 10,fontsize =100]\n\nedge [color = grey,dir=both ,arrowsize = 3,minlen = 10, color = Black]\n\n\n\na -> {b c d}\nb -> {e[label=\"Directos\"] f[label=\"Indirecto\"] }\nc -> {k[label=\"Sostenibilidad\"]   }\nd -> {q[label=\"Paises\"] r[label=\"Banderas\"] m[label=\"Artes de pesca\"]}\n\n\n}","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<p class="caption">
+El interés como gestor
+</p>
+</div>
 </div>
 <div id="slide2-with-r-output" class="slide section level2">
 <h1>Slide2 with R Output</h1>
